# Zalea

./: .gitignore  CMakeLists.txt  MainExecutable.cmake  README.md  Tree.cmake
Architecture/: ArchitectureSelector.cmake  CMakeLists.txt  CheckBinutilsName.cmake  CheckCompilerName.cmake  MachineSelector.cmake
Architecture/ARM/: ARM.cmake  CMakeLists.txt
Architecture/ARM/Boot/: CMakeLists.txt  EntryPoint.c  EntryPoint.sx  Startup.c  armv7-a.vectors.sx
Architecture/ARM/Configurations/: ArchitectureExporter.cmake  Raspberry Pi 2 Model B.cfg.cmake  RealView Platform Baseboard Explore for Cortex-A9.cfg.cmake  Versatile Express for Cortex-A15.cfg.cmake
Architecture/ARM/DeviceDescriptor/: ARM Versatile Express for Cortex-A15.json  Raspberry Pi 2 Model B v1.1.json
Architecture/Include/: ImageConstants.h
Architecture/x86/: CMakeLists.txt  x86.cmake
Architecture/x86/Boot/: CMakeLists.txt  EntryPoint.c  EntryPoint.sx
Architecture/x86/Configurations/: ArchitectureExporter.cmake  Generic x86 32bit Intel Prescott.cfg.cmake  Generic x86 32bit for Intel Pentium 4m.cfg.cmake  Generic x86 32bit for Intel Prescott.cfg.cmake  Legacy x86 Intel Pentium 4.cfg.cmake
Architecture/x86/DeviceDescriptor/: Legacy x86 Intel Pentium 4 or better.json
Device Descriptor/ARM/: ARM RealView PBX.yaml  ARM RealView Platform Baseboard Explore for Cortex-A9.yaml  ARM Versatile Express for Cortex-A15.json  ARM Versatile Express for Cortex-A15.yaml  Raspberry Pi 2 Model B v1.1.yaml
Device Descriptor/ARM/Common/: ARMv7-a.json  ARMv7-a.yaml
Device Descriptor/x86/: Legacy x86 Intel Pentium 4 or better.json  Legacy x86 Intel Pentium 4 or better.yaml
Device Descriptor/x86/Common/: x86-BIOS.yaml
Documentation/: CMakeLists.txt  Doxyfile
Executables/: CMakeLists.txt  CPlusPlusMainExecutable.cxx  LinkerScriptDefinitions.h  LinkerScriptDefinitions.in  MainExecutableBase.h  MainExecutableLinkerBase.h  MainExecutableLinkerBase.in  Multiboot2.c  Multiboot2.cxx  Multiboot2.h  Multiboot2.hxx
Executables/ARM/: GNU.MainExecutable.in.ld  LLVM.MainExecutable.in.ld  MainExecutable.in.ld
Executables/ExecutableLibrary/: ImageConstants.h
Executables/LinkerLibrary/: LinkerScriptDefinitions.in  LinkerScriptDefinitions.in.ld  MainExecutableLinkerBase.in  MainExecutableLinkerBase.in.ld
Executables/LinkerLibrary/ARM/: MainExecutable.in.ld
Executables/LinkerLibrary/x86/: MainExecutable.in.ld
Executables/x86/: GNU.MainExecutable.in.ld  LLVM.MainExecutable.in.ld  MainExecutable.in.ld
Scripts/CMake/: CMakeExtensions.cmake
Scripts/CMake/Extensions/: GenerateDeviceDescriptor.cmake  PureCheckToolsByName.cmake  PureFileUtils.cmake  PureGenerateTargetList.cmake  PurePythonRunner.cmake  PureTargetUtils.cmake  PureVarsUtils.cmake  SetAndExport.cmake
Scripts/CMake/Modules/Platform/: Kernel-AppleClang-ASM-ARM.cmake  Kernel-AppleClang-ASM-x86.cmake  Kernel-AppleClang-ASM.cmake  Kernel-AppleClang-C-ARM.cmake  Kernel-AppleClang-C-x86.cmake  Kernel-AppleClang-C.cmake  Kernel-AppleClang-CXX-ARM.cmake  Kernel-AppleClang-CXX-x86.cmake  Kernel-AppleClang-CXX.cmake  Kernel-Clang-ASM-ARM.cmake  Kernel-Clang-ASM-x86.cmake  Kernel-Clang-ASM.cmake  Kernel-Clang-C-ARM.cmake  Kernel-Clang-C-x86.cmake  Kernel-Clang-C.cmake  Kernel-Clang-CXX-ARM.cmake  Kernel-Clang-CXX-x86.cmake  Kernel-Clang-CXX.cmake  Kernel-GNU-ASM-ARM.cmake  Kernel-GNU-ASM-x86.cmake  Kernel-GNU-ASM.cmake  Kernel-GNU-C-ARM.cmake  Kernel-GNU-C-x86.cmake  Kernel-GNU-C.cmake  Kernel-GNU-CXX-ARM.cmake  Kernel-GNU-CXX-x86.cmake  Kernel-GNU-CXX.cmake  Kernel-Intel-ASM-x86.cmake  Kernel-Intel-ASM.cmake  Kernel-Intel-C-x86.cmake  Kernel-Intel-C.cmake  Kernel-Intel-CXX-x86.cmake  Kernel-Intel-CXX.cmake  Kernel.cmake
Scripts/CMake/Templates/: DeviceDescriptor.c.in  DeviceDescriptor.c.in.h  DeviceDescriptor.in  DeviceDescriptor.in.h  ExportedConfig.in.cmake  config.in.h
Scripts/CMake/Toolchain/: CMakeCompilerToolchain.cmake  CMakeToolchain.cmake
Scripts/Python/Environments/: generate.py
Scripts/Python/Sources/: CMakeConfigExporter.py  HashTableForProperties.py  HashTableFromJson.py  HashTableFromYaml.py  __init__.py
Scripts/Python/Sources/YAML/: HashTableFromYaml.py  YamlMerging.py  YamlTags.py
Scripts/Python/Tests/: TestCMakeConfigExporter.py  __init__.py  config.i.json
